--- a/style.css
+++ b/style.css
@@ -28,10 +28,15 @@ body {
 }
 
 #temp-container span:first-child {
-  font-size: 1.8rem;
+  font-size: 2.2rem;
   font-weight: 700;
 }
 
 #temp-container span {
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+
+img {
+  height: 200px;
+  width: 200px;
 }
