--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background: linear-gradient(to left, #1c92d2, #007991);
+  background: linear-gradient(to top left, #9bafd9, #103783);
   color: #f2f2f2;
   font-family: sans-serif;
 }
